fix jump controls zindex

--- a/src/getonboard.scss
+++ b/src/getonboard.scss
@@ -52,6 +52,7 @@ html, .mode_3d #game_play_area_background {
   #jump-controls {
     position: fixed;
     top: 50vh;
+    z-index: 5;
 
     .jump-link {
       position: relative;
